# quicklook

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DECODE_VIDEO_USAGE.md  KNOWLEDGE_GRAPH.md  README.md  STATIC_LINKING_SUMMARY.md  THIRD_PARTY_LIB.md  VCPKG.md  VIDEO_TRANSCODING_GUIDE.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vcpkg-configuration.json  vcpkg.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  check-rust.yml  check-ts-type.yml  scoop.yml  winget.yml
crates/archive/: Cargo.toml
crates/archive/src/: error.rs  lib.rs
crates/archive/src/extractors/: ar.rs  cpio.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  zip.rs  zst.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/book/: Cargo.toml
crates/book/src/: epub.rs  lib.rs  mobi.rs
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs  pdf.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/office-converter/: Cargo.toml  README.md  run_examples.bat  run_examples.ps1  test.docx  test.xlsx
crates/office-converter/examples/: README.md  convert_document.rs  detect_office.rs
crates/office-converter/src/: com_utils.rs  converter.rs  detector.rs  error.rs  lib.rs  ms_office.rs  wps_office.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: lib.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
scripts/: README.md  setup-vcpkg.bat  setup-vcpkg.ps1  setup-vcpkg.sh  validate-vcpkg.ps1
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  settings.json
src-tauri/resources/: 99-quicklook-input.rules  config.json
src-tauri/src/: command.rs  error.rs  lib.rs  preview.rs  tray.rs
src-tauri/src/commands/: archive.rs  audio.rs  book.rs  document.rs  image.rs  mod.rs  model.rs  pdf.rs  system.rs  video.rs
src-tauri/src/helper/: archives.rs  audio.rs  config.rs  ffm.rs  ffmp.rs  ffmpeg.rs  image.rs  mod.rs  monitor.rs  selected_file.rs  win.rs
src-tauri/src/preview/: hook.rs  mod.rs  route.rs  window.rs
src-tauri/src/utils/: mod.rs
src/assets/: base.css  main.scss  var.css
src/assets/var/: layout.css
src/components/: footer.vue  header.vue  layout-preview.vue  setting-item.vue
src/components/document/: excel.vue
src/router/: index.ts
src/utils/markdown/: index.ts
src/views/: settings.vue  upgrade.vue
src/views/home/: index.vue
src/views/preview/: archive.vue  audio.vue  book.vue  code.vue  document.vue  font.vue  image.vue  index.vue  model.vue  not-support.vue  video.vue
src/views/preview/components/: pdf-viewer.vue
test_files/: generate.py  test.rar  test_triangle.3mf  test_triangle.fbx
