[workspace]
members = [
    "src-tauri",
    "crates/archive",
    "crates/book",
    "crates/docs",
    "crates/error",
    "crates/audio",
    "crates/image",
    "crates/video",
]
resolver = "2"

[workspace.dependencies]
# 内部 crate
quicklook-archive = { path = "crates/archive" }
quicklook-docs = { path = "crates/docs" }
quicklook-error = { path = "crates/error" }
quicklook-audio = { path = "crates/audio" }
quicklook-image = { path = "crates/image" }
quicklook-video = { path = "crates/video" }
quicklook-book = { path = "crates/book" }

# 共有第三方依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25"

[workspace.metadata.rustfmt]
config-path = "rustfmt.toml"
