[package]
name = "app"
version = "0.18.1"
description = "Windows 平台的文件预览工具"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [
    "protocol-asset",
    "unstable",
    "tray-icon",
] }
windows = { version = "0.61.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }
# tauri 相关
tauri-plugin-opener = "2.5.4"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"

urlencoding = "2.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
# Archive handling library
quicklook-archive = { path = "../crates/archive" }
# Document processing library
quicklook-docs = { path = "../crates/docs" }
# Shared error types
quicklook-error = { path = "../crates/error" }
# Audio metadata and LRC parsing
quicklook-audio = { path = "../crates/audio" }
# Image format conversion
quicklook-image = { path = "../crates/image" }
# FFmpeg video conversion
quicklook-video = { path = "../crates/video" }
# Book format parsing (epub)
quicklook-book = { path = "../crates/book" }
# PDF rendering (now in quicklook-docs)
tokio = { version = "1", features = ["rt"] }
