[package]
name = "quicklook-audio"
version = "0.1.0"
description = "Audio metadata and LRC lyric parsing for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_audio"
crate-type = ["rlib"]

[dependencies]
lofty = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
quicklook-error = { path = "../error" }
