[package]
name = "quicklook-book"
version = "0.1.0"
description = "Book format parsing (epub/mobi) for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_book"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
quicklook-error = { path = "../error" }
epub = "2.1"
mobi = "0.8"
serde = { version = "1.0", features = ["derive"] }
