[package]
name = "quicklook-book"
version = "0.1.0"
description = "Book format parsing (epub) for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "quicklook_book"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
quicklook-error = { path = "../error" }
iepub = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
