[package]
name = "quicklook-docs"
version = "0.1.0"
description = "Document processing library for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_docs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
calamine = "0.36.0"
csv = "1.3.1"
log = { workspace = true }
quicklook-error = { workspace = true }
# PDF rendering
pdfium-render = "0.9"
image = { workspace = true }

[features]
default = ["excel", "csv", "docx", "pdf"]
excel = []
csv = []
docx = []
pdf = []
