[package]
name = "quicklook-error"
version = "0.1.0"
description = "Shared error types for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_error"
crate-type = ["rlib"]

[dependencies]
thiserror = "2"
serde = { workspace = true }
