[package]
name = "quicklook-image"
version = "0.1.0"
description = "Image format conversion (PSD, HEIC, JXL, etc.) for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_image"
crate-type = ["rlib"]

[dependencies]
psd = "0.3.5"
image = { workspace = true, features = ["png", "webp", "jpeg", "gif", "bmp", "ico", "tiff", "tga", "pnm", "qoi", "exr"] }
jxl-oxide = { version = "0.12", features = ["image"] }
libheif-rs = { version = "2.7", features = ["image"] }
log = { workspace = true }
quicklook-error = { workspace = true }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2026.05.25"
dependencies = ["libheif"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
aarch64-pc-windows-msvc = { triplet = "arm64-windows-static-md" }
