[package]
name = "office-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Variant",
] }
